force-app/main/default/objects/Batch_Processing_Detail__c/Batch_Processing_Detail__c.object-meta.xml
<CustomObject>
    <label>Batch Processing Detail</label>
    <nameField>
        <displayFormat>BPD-{0000}</displayFormat>
        <label>Batch Processing Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Processing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>