force-app/main/default/objects/Batch_Processing_Detail__c/fields/Batch_Processing__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processing__c</fullName>
    <label>Batch Processing</label>
    <referenceTo>Batch_Processing__c</referenceTo>
    <relationshipLabel>Batch Processing Details</relationshipLabel>
    <relationshipName>Batch_Processing_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>