force-app/main/default/objects/Batch_Processing_Detail__c/fields/Object_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Record_Id__c</fullName>
    <label>Object Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>